VirtualThreadを利用できるようにする Fixes #3